Crash with Blender Studio's stretching visualization file #103301

Closed
opened 2022-12-17 18:54:53 +01:00 by Sun Kim · 12 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-17 02:15, hash: 6797de4e10
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-15 01:17, hash: 0240b89599

Caused by: b1494bcea7

Short description of error
Stretching visualization example file from Blender Studio's website immediately crashes as it opens.

stretching_gn_overlay.crash.txt

Exact steps for others to reproduce the error
stretching_gn_overlay.blend

  • Download the file and open it
  • Crash

You can avoid crash by opening it with Load UI setting disabled. But it likely crashes when you try to display the heatmap color attribute. Even if it does not crash the heatmap color is not shown.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-17 02:15, hash: `6797de4e10` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-15 01:17, hash: `0240b89599` Caused by: b1494bcea7 **Short description of error** Stretching visualization example file from [Blender Studio's website ](https://studio.blender.org/training/realistic-human-research/chapter/shapes-and-baking/) immediately crashes as it opens. [stretching_gn_overlay.crash.txt](https://archive.blender.org/developer/F14066978/stretching_gn_overlay.crash.txt) **Exact steps for others to reproduce the error** [stretching_gn_overlay.blend](https://archive.blender.org/developer/F14066963/stretching_gn_overlay.blend) - Download the file and open it - Crash You can avoid crash by opening it with `Load UI` setting disabled. But it likely crashes when you try to display the heatmap color attribute. Even if it does not crash the heatmap color is not shown.
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @HooglyBoogly, @deadpin

Added subscribers: @HooglyBoogly, @deadpin

The crash was fixed by 28511ac6cf but the display of the heatmap color attribute is still broken and seem to have been caused by b1494bcea7

CC @HooglyBoogly

The crash was fixed by 28511ac6cf but the display of the heatmap color attribute is still broken and seem to have been caused by b1494bcea7 CC @HooglyBoogly
Hans Goudey self-assigned this 2022-12-18 18:43:03 +01:00
Member

Claiming this so I don't forget to fix it.

Claiming this so I don't forget to fix it.
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

The file seems to be missing a viewer node. There is no material here either, so it probably relied on the viewer node to see something in the viewport.

Is this working as intended now?

The file seems to be missing a viewer node. There is no material here either, so it probably relied on the viewer node to see something in the viewport. Is this working as intended now?
Author
Contributor

In #103301#1463248, @HooglyBoogly wrote:
The file seems to be missing a viewer node. There is no material here either, so it probably relied on the viewer node to see something in the viewport.

It's intended to use viewport shading's color option to display the attribute.

3.4

stretching_gn_overlay_3.4.png

3.5 (December 18 daily build)

stretching_gn_overlay_3.5.daily.png

> In #103301#1463248, @HooglyBoogly wrote: > The file seems to be missing a viewer node. There is no material here either, so it probably relied on the viewer node to see something in the viewport. It's intended to use viewport shading's color option to display the attribute. 3.4 ![stretching_gn_overlay_3.4.png](https://archive.blender.org/developer/F14073968/stretching_gn_overlay_3.4.png) 3.5 (December 18 daily build) ![stretching_gn_overlay_3.5.daily.png](https://archive.blender.org/developer/F14073970/stretching_gn_overlay_3.5.daily.png)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Ah, right, thanks.

Ah, right, thanks.

This issue was referenced by c2a8d8b18d

This issue was referenced by c2a8d8b18ddbcbba9419c00f53f1313d5e1c6f7e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103301
No description provided.